--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.817.0",
+    "@aws-sdk/credential-providers": "^3.817.0",
+    "@aws-sdk/util-dynamodb": "^3.817.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   }
